<resources>
    <string name="app_name">madgroupassignment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="once_on_the_button_will_send_the_reminder_before_1_hour">Once on the button, will send the reminder before 1 hour</string>
    <string name="notification">Notification</string>
    <string name="help_icon">icon</string>
    <string name="notification_icon">notification_icon</string>
    <string name="help">Help</string>
    <string name="arrow">Arrow</string>
    <string name="faq">FAQ</string>
    <string name="faq_text">FAQ</string>
    <string name="contact_icon">Contact_icon</string>
    <string name="contact_us">Contact US</string>
    <string name="arrow_contact">Arrow_contact</string>
    <string name="sign_out">Sign Out</string>
    <string name="group_icon">Group icon</string>
    <string name="arrow_icon">Help_center_icon</string>
    <string name="help_center">Help Center</string>
    <string name="arrow_faq">Arrow_faq</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="Facebook">Facebook</string>
    <string name="Instagram">Instagram</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="arrow_facebook">arrow_facebook</string>
    <string name="arrow_instagram">arrow_instagram</string>
    <string name="arrow_whatsapp">arrow_whatsapp</string>
    <string name="app_icon">app_icon</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="taskmate_run">TaskMate</string>
    <string name="username_edit">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="walkthrough_message_here">Walkthrough message here</string>
    <string name="next">Next</string>

    <string-array name="notification_times">
        <item>15 Minutes </item>
        <item>30 Minutes </item>
        <item>1 Hour</item>
        <item>2 Hours</item>
    </string-array>


</resources>