<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="24dp">

    <ImageView
        android:id="@+id/profile_image_edit"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_profile_placeholder"
        android:contentDescription="@string/edit_profile_picture" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="insert your age"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="birthday"
        android:focusable="false"
        android:hint="@string/birthday"
        android:inputType="date"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="#795548" />
</LinearLayout>

